syntax = "proto3";
package log;

message LogRequest {
  string message = 1;
}

message LogResponse {
  string message = 1;
}

service LogService {
  rpc Log(LogRequest) returns (LogResponse);
}